# socket.io-redis-emitter

./: .flake8  .gitignore  Makefile  mypy.ini  pyproject.toml  readme.md
.github/workflows/: coverage.yml  python-publish.yml  release.yml  test.yml
socketio_emitter/: __init__.py  consts.py  emitter.py  entities.py
tests/: conftest.py  test_emitter.py
