[tool.poetry]
name = "socket.io-redis-emitter"
version = "0.0.2"
description = "An asynchronous Redis-based Socket.IO emitter for Python"
authors = ["Roman Glushko <roman.glushko.m@gmail.com>"]
readme = "readme.md"
repository = "https://github.com/roma-glushko/socket.io-redis-emitter"
keywords = ["socket.io", "redis", "websocket", "emitter", "library"]

classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules"
]

license = "MIT"

packages = [
    { include = "socketio_emitter" },
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
msgpack = "1.0.8"
pydantic = "==2.4.2"
redis = {version = "==5.0.2", extras = ["hiredis"]}

[tool.poetry.dev-dependencies]
pytest = "7.1.1"
isort = "5.10.1"
black = "22.3.0"
flake8 = "5.0.4"
mypy = "1.6.1"
pytest-asyncio = "0.21.1"
coverage = "6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"